unpackaged/main/default/objects/PowerPass_Signup_Field_Mapping__mdt/PowerPass_Signup_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Used for passing values to PowerPass sign up pate as per CCRM-194</description>
    <label>PowerPass Signup Field Mapping</label>
    <pluralLabel>PowerPass Signup Field Mappings</pluralLabel>
</CustomObject>