unpackaged/main/default/objects/PowerPass_Signup_Field_Mapping__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>The field name from PowerPass</description>
    <inlineHelpText>The field name from PowerPass</inlineHelpText>
    <label>Field Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>