unpackaged/main/default/objects/PowerPass_Signup_Field_Mapping__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>The target field for this field mapping</description>
    <inlineHelpText>The target field for this field mapping</inlineHelpText>
    <label>Target Field</label>
    <length>64</length>
    <type>Text</type>
</CustomField>