unpackaged/main/default/objects/PowerPass_Signup_Field_Mapping__mdt/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <description>The target object for this field mapping</description>
    <inlineHelpText>The target object for this field mapping</inlineHelpText>
    <label>Target Object</label>
    <length>64</length>
    <type>Text</type>
</CustomField>